[package]
name = "advent"
version = "0.1.0"
authors = ["Caleb Anderson <robotrising@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuel = { package = "day-1", path = "../day-1"}
day-2 = {path = "../day-2"}
