[package]
name = "advent"
version = "0.1.0"
authors = ["Caleb Anderson <robotrising@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuel = { path = "../fuel" }
intcode = { path = "../intcode" }
vector = { path = "../vector" }
password = { path = "../password" }
orbitmapper = { path = "../orbitmapper" }
